# InsightForge

./: .dockerignore  .env.deploy.example  .env.example  .gitignore  .tbls.yml  AGENTS.md  ARCHITECTURE.md  CONTEXT.md  Caddyfile  Dockerfile  Procfile  README.md  _patch_converter.py  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-eval.txt  requirements.txt  start_dev.bat
agent/: __init__.py
core/: __init__.py  config.py  config_manager.py  exceptions.py  factory.py  logging.py  protocols.py  protocols_v2.py  retry.py  source_config.py
delivery/: __init__.py  auth.py  cli.py  rebuild_cli.py  server.py  streamlit_app.py
docs/: DESIGN.md  PLANS.md  plan.md
document/: Development Plan.md  architecture-current.md  architecture-issues.md  architecture-target.md  demo_design.md  full_design.md
evals/: __init__.py  adapters.py  config.py  eval_config.json  metrics.py  runner.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
infrastructure/: agent_session_store.py  article_store.py  auth_store.py  chunking_service.py  collection_store.py  collector.py  competitor_store.py  config_audit_store.py  connectors.py  document_dedup_store.py  document_store.py  embedding_client.py  fetch_blob_store.py  fetch_engines.py  hybrid_search_service.py  insight_store.py  insight_store_v2.py  intel_store.py  intel_store_v2.py  judge_client.py  keyword_search_service.py  llm_client.py  markdown_converter.py  memory_store.py  pgvector_store.py  postgres_article_store.py  (+11 more)
(+2503 files in other folders)
